maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:5: error: 'case' expected but identifier found.
		match {i} {
                       ^RandomMouseMaze:5: error: ';' expected but '{' found.
		match {i} {
                          ^